--- a/src/components/HostProblemFeed/Feed.css
+++ b/src/components/HostProblemFeed/Feed.css
@@ -5,7 +5,7 @@
 }
 
 .FeedContent{
-    background-color: #FAEA73;
+    background-color: #4d82e2;
     border-radius: 10px;
     height: 500px;
     width : 100%;
@@ -15,4 +15,21 @@
     justify-content: left;
     padding-left: 50px;
     margin-bottom : 50px;
+}
+
+.ProblemFeedChoice{
+    display: flex;
+    gap : 50%;
+    align-items: center;
+}
+
+.AcceptButton{
+    width: 150%;
+    padding: 10px 10px 10px 10px;
+    border-radius : 10px;
+    border : 3px solid white;
+    font-size: 120%;
+    background-color: transparent;
+    color : white;
+    font-weight : bolder;
 }
