new changes on may 1

--- a/src/components/UserProblemDisplay/Problems.css
+++ b/src/components/UserProblemDisplay/Problems.css
@@ -9,7 +9,7 @@
 .problem-container{
     width : 30%;
     height : auto;
-    background-color: #FE9E0D;
+    background-color: rgb(77, 130, 226);
     border-radius : 20px;
     padding: 10px;
     margin-bottom: 10px;
