--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -13,7 +13,7 @@
     font-weight: lighter;
     text-align: center;
     color: white;
-    background-color: #3A30BA;
+    background-color: #4d82e2;
     border-top-right-radius: 10px; 
     border-bottom-right-radius: 10px; 
     display: flex;
@@ -60,7 +60,6 @@
 }
 
 .PersonalInfo{
-
 }
 
 
@@ -71,7 +70,7 @@
 .UPassWord,
 .ContactDetailsHeading,
 .PersonalInfoHeading {
-    background-color: #3A30BA;
+    background-color: #4d82e2;
     color: white;
     width: 100vh;
     font-weight: 700;
@@ -118,6 +117,3 @@
     gap : 20px;
     justify-content: center;
 }
-
-
-
