--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,17 +1,17 @@
 .LoginContainer {
     display: flex;
     font-family: 'Poppins', sans-serif; 
-    color: #080a47;
+    color: #000000;
     height: 100vh;
 }
 
 .LoginSlogan {
-    flex: 0.7; 
+    flex: 0.7;
     font-size: 30px;
     font-weight : lighter;
     text-align: center;
     color: white;
-    background-color: #080a47;
+    background-color: #4d82e2;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     display: flex;
@@ -20,7 +20,7 @@
 }
 
 .Slogan{
-    background: linear-gradient(90deg, rgb(255, 255, 255), #a574f9, rgb(59, 255, 183));
+    background: linear-gradient(90deg, rgb(255, 255, 255), #a0a0a0, rgb(55, 55, 55), rgb(0, 0, 0));
     font-family : Poppins;
     font-size : 60px;
     text-transform : uppercase;
@@ -36,12 +36,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: solid #080a47 2px;
+    border: solid #ffffff 2px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     background-color: white;
     margin-left: -2px;
-    padding: 20px; 
+    padding: 20px;
 }
 
 .Username,
