--- a/src/components/HostFeatures/HostFeature.css
+++ b/src/components/HostFeatures/HostFeature.css
@@ -1,5 +1,5 @@
 .FeatureContainer{
-    background-color: #FFF9F3;
+    background-color: #FFFfFf;
     font-family : "poppins", "sans-serif";
     display: flex;
     gap : 100px;
