--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,7 +3,7 @@
 }
 
 .FooterContainer {
-    background-color: #f6f6f6; 
+    background-color: #ffffff; 
     padding: 20px; 
     width : 100%;
 }
