--- a/src/components/benefits/benefits.css
+++ b/src/components/benefits/benefits.css
@@ -1,3 +1,7 @@
+/* *{
+    background-color: white;
+} */
+
 .benefitsContainer{
      margin-top : 30px;
      font-family : "poppins", sans-serif;
